force-app/main/default/objects/Apttus_Config2__GLAccountMapEntry__c/Apttus_Config2__GLAccountMapEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in a G/L account map rule</description>
    <label>G/L Account Map Entry</label>
    <nameField>
        <displayFormat>RE-{00000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G/L Account Map Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>