force-app/main/default/objects/Apttus_Config2__GLAccountMapEntry__c/fields/Apttus_Config2__GLAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GLAccountId__c</fullName>
    <description>The base G/L account Id</description>
    <inlineHelpText>The base G/L account Id</inlineHelpText>
    <label>G/L Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>