force-app/main/default/objects/Apttus_Config2__GLAccountMapEntry__c/fields/Apttus_Config2__GLAccountName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GLAccountName__c</fullName>
    <description>The G/L account name</description>
    <inlineHelpText>The G/L account name</inlineHelpText>
    <label>G/L Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>