force-app/main/default/objects/Apttus_Config2__GLAccountMapEntry__c/fields/Apttus_Config2__GLAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GLAccountNumber__c</fullName>
    <description>The G/L account number</description>
    <inlineHelpText>The G/L account number</inlineHelpText>
    <label>G/L Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>