force-app/main/default/objects/Apttus_Config2__GLAccountMapEntry__c/fields/Apttus_Config2__MapRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MapRuleId__c</fullName>
    <description>ID of the associated mapping rule</description>
    <inlineHelpText>ID of the associated map rule</inlineHelpText>
    <label>Map Rule</label>
    <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
    <relationshipLabel>Entries</relationshipLabel>
    <relationshipName>MapEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>