force-app/main/default/objects/Apttus_Config2__GLAccountMapEntry__c/fields/Apttus_Config2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Sequence__c</fullName>
    <description>The rule entry sequence</description>
    <inlineHelpText>The rule entry sequence</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>